--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ Scripts
 pyvenv.cfg
 share
 etc
-project_ds\laptops_data_exploration\.ipynb_checkpointsgi
+project_ds\laptops_data_exploration\.ipynb_checkpoints
